--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,13 @@
     <properties>
         <java.version>11</java.version>
         <spring-cloud-stream.version>3.0.8.RELEASE</spring-cloud-stream.version>
+
+        <db.host.name>localhost</db.host.name>
+        <db.host.port>5431</db.host.port>
+        <db.name>telegram</db.name>
+        <db.url>jdbc:postgresql://${db.host.name}:${db.host.port}/${db.name}</db.url>
+        <db.user>postgres</db.user>
+        <db.password>password</db.password>
     </properties>
     <dependencies>
         <dependency>
@@ -62,6 +69,20 @@
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
         </dependency>
     </dependencies>
 
